- All equipment items that specify a Rating (Cyberware, Gear, Vehicle Mods, Weapon Accessories) can now specify a RatingLabel that is applied in place of the standard Rating. For example, Fiberoptic Hair can specify that the Rating is ten-centimetre increments of length. 

Application Fixes:
- Fixed issues with the Balistic Shield Exotic Melee Weapon choice not being present in the Exotic Weapon skill selector window. Closes #3856
- Dedicated Spellslinger properly allows for purchasing spells while the character does not have enough karma to afford it. Closes #3859
- Fixed a regression with lifestyle qualities not properly storing their Area, Security and Comfort values. Closes #3869
- Fixed an issue with martial arts techniques improperly storing their Source as the Page.
- Fixed a regression in the behaviour of availability values improperly causing Built-In items to count towards availabiltiy at character creation. 
- The SwapSkillAtribute Improvement now properly makes the attribute get swapped for the selected attribute.

Data Changes:
- Tetrachromacy now adds adds +3 to Perception, with a (Visual) condition. This will be exposed to the Print method for character sheets at a later date. 
- Grapple Fist cyberware now properly uses the skill of the Grapple Gun Exotic skill.
- Fixed an issue with the Private Investigator life module that prevented it from being added.
- Removed Ratings from Cosmetic Surgery, replaced with variable cost.
- Added RatingLabel to Fiberoptic Hair and Telescoping Limbs. 
- Fixed an issue with the Point Priority Chargen customdata file causing metahumans to be unavailable.
- Added missing Device Ratings to the RG Pi-Tacs.
- Added missing minimum rating on Reaction Enhancers, courtesy of JoshuarTree.
- Added correct Rank qualities to the Military Academy and Military School life modules. 

New Strings:
- Label_MetagenicKarmaValue
- Label_MetagenicKarmaValueAppend
- Label_SummaryMetagenicQualities
- Rating_Meters
- Rating_LengthInCmBy10